src/component/telemachy.component.css
.overlay {
	position: absolute;
	background: rgba(0, 0, 0, 0.5);
	pointer-events: none;
	z-index: 9000000;
	transition: all 0.25s ease;
}
.explanation {
	position: absolute;
	z-index: 9000000;
	transition: all 0.25s ease;
	border-width: 1px;
	border-color: inherit;
	border-style: solid;
	background-color: white;
	margin-top: 0.5em;
}
.explanation .content {
	padding: 1em;
}
.explanation .controls {
	margin-top: 1em;
}

.popup {
	position: absolute;
	width: 50%;
	left: 25%;
	top: 35vh;
	height: 30vh;
	border-width: 1px;
	border-color: inherit;
	border-style: solid;
	background-color: white;
	z-index: 9000000;
}
.popup .content {
	padding: 1em;
	height: calc(100% - 2em);
	position: relative;
}
.popup .content .body {
	overflow-y: auto;
	height: calc(100% - 29px);
}
.popup .controls {
	position: absolute;
	bottom: 1em;
}
.controls a {
	cursor: pointer;
	font-size: 1.5em;
	font-weight: 100;
	margin-left: 0.5em;
	margin-right: 0.5em;
}
.controls span {
	margin-left: 0.5em;
	margin-right: 0.5em;
}

.video {
	position: fixed;
	top: calc((100vh - 480px)/2);
	left: calc((100% - 853px)/2);
	z-index: 9000000;
}
.ytpopup {
	position: fixed;
	bottom: calc((100vh - 480px)/2 - 63px - 1em);
	left: calc((100% - 853px)/2);
	z-index: 9000000;
	background-color: white;
	border-width: 1px;
	border-color: inherit;
	border-style: solid;
	width: 853px;
}
.ytpopup .content {
	padding: 1em;
}

